# vissus_projekt

./: #%2Ascratch%2A#xuPIoc#  .gitignore  .telescope_ignore.lua  CMakeLists.txt  README.md  package.xml
bags/rosbag2_2026_02_07-22_35_05/: metadata.yaml
bags/rosbag2_2026_02_07-22_44_59/: metadata.yaml
config/: mission.json  tasks.json
docs/: stage installation.md
include/:  *Minibuf-1*  #vector2.hpp#  defines.h  utils.h  vector2.hpp
include/data-splitter/: data-splitter-node.hpp
install/: local_setup.sh  setup.sh
install/vissus_projekt/include/vissus_projekt/vissus_projekt/msg/: formation.h  formation.hpp  odometry_array.h  odometry_array.hpp  rosidl_generator_c__visibility_control.h  rosidl_generator_cpp__visibility_control.hpp  rosidl_typesupport_fastrtps_c__visibility_control.h  rosidl_typesupport_fastrtps_cpp__visibility_control.h  rosidl_typesupport_introspection_c__visibility_control.h  tuning_params.h  tuning_params.hpp
install/vissus_projekt/include/vissus_projekt/vissus_projekt/msg/detail/: formation__builder.hpp  formation__functions.h  formation__rosidl_typesupport_fastrtps_c.h  formation__rosidl_typesupport_fastrtps_cpp.hpp  formation__rosidl_typesupport_introspection_c.h  formation__rosidl_typesupport_introspection_cpp.hpp  formation__struct.h  formation__struct.hpp  formation__traits.hpp  formation__type_support.h  formation__type_support.hpp  odometry_array__builder.hpp  odometry_array__functions.h  odometry_array__rosidl_typesupport_fastrtps_c.h  odometry_array__rosidl_typesupport_fastrtps_cpp.hpp  odometry_array__struct.h  (+17 more)
install/vissus_projekt/share/ament_index/resource_index/package_run_dependencies/: vissus_projekt
install/vissus_projekt/share/ament_index/resource_index/parent_prefix_path/: vissus_projekt
install/vissus_projekt/share/ament_index/resource_index/rosidl_interfaces/: vissus_projekt
install/vissus_projekt/share/vissus_projekt/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/vissus_projekt/share/vissus_projekt/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake  ament_cmake_export_targets-extras.cmake  export_vissus_projekt__rosidl_generator_cExport-noconfig.cmake  export_vissus_projekt__rosidl_generator_cExport.cmake  export_vissus_projekt__rosidl_generator_cppExport.cmake  export_vissus_projekt__rosidl_generator_pyExport-noconfig.cmake  export_vissus_projekt__rosidl_generator_pyExport.cmake  export_vissus_projekt__rosidl_typesupport_fastrtps_cExport-noconfig.cmake  export_vissus_projekt__rosidl_typesupport_fastrtps_cExport.cmake  export_vissus_projekt__rosidl_typesupport_fastrtps_cppExport-noconfig.cmake  export_vissus_projekt__rosidl_typesupport_fastrtps_cppExport.cmake  rosidl_cmake-extras.cmake  rosidl_cmake_export_typesupport_libraries-extras.cmake  rosidl_cmake_export_typesupport_targets-extras.cmake  vissus_projektConfig-version.cmake  vissus_projektConfig.cmake  vissus_projekt__rosidl_typesupport_cExport-noconfig.cmake  vissus_projekt__rosidl_typesupport_cExport.cmake  vissus_projekt__rosidl_typesupport_cppExport-noconfig.cmake  vissus_projekt__rosidl_typesupport_cppExport.cmake  vissus_projekt__rosidl_typesupport_introspection_cExport-noconfig.cmake  vissus_projekt__rosidl_typesupport_introspection_cExport.cmake  vissus_projekt__rosidl_typesupport_introspection_cppExport-noconfig.cmake  vissus_projekt__rosidl_typesupport_introspection_cppExport.cmake
install/vissus_projekt/share/vissus_projekt/environment/: ament_prefix_path.dsv  library_path.dsv  path.dsv  pythonpath.dsv  pythonpath.sh
install/vissus_projekt/share/vissus_projekt/launch/: example.yml  launch_params.yaml  simulation.launch.py  sphero_sim.rviz  start.launch.py  topology
install/vissus_projekt/share/vissus_projekt/msg/: Formation.idl  Formation.msg  OdometryArray.idl  OdometryArray.msg  TuningParams.idl  TuningParams.msg
launch/: #%2Ascratch%2A#1yAc9p#  experimental.launch.py  launch_params.yaml  market.launch.py  market.yml  market_start.sh  simple.yml  simple_start.sh  simulation.launch.py  start.launch.py  topology  topology.yaml  vissus_latest.perspective
launch/rosbag2_2026_02_08-20_30_22/: metadata.yaml  rosbag2_2026_02_08-20_30_22_0.db3
launch/rosbag2_2026_02_08-20_47_24/: metadata.yaml
launch/rosbag2_2026_02_08-20_52_11/: metadata.yaml
launch/rosbag2_2026_02_08-20_53_41/: metadata.yaml
launch/rosbag2_2026_02_08-21_21_45/: metadata.yaml
launch/rosbag2_2026_02_08-21_34_26/: metadata.yaml  rosbag2_2026_02_08-21_34_26_0.db3
launch/rosbag2_2026_02_08-21_36_54/: rosbag2_2026_02_08-21_36_54_0.db3
launch/rosbag2_2026_02_08-21_40_07/: metadata.yaml
launch/rosbag2_2026_02_08-22_20_05/: metadata.yaml
launch/rosbag2_2026_02_08-23_31_40/: metadata.yaml
launch/rosbag2_2026_02_08-23_45_06/: metadata.yaml
log/: latest_build
msg/: Bid.msg  Formation.msg  FormationMsg.msg  OdometryArray.msg  Task.msg  TaskList.msg  TuningParams.msg
scripts/: auctioneer.py  bidder.py  bidders.py  example.yml  market.py  robot_0_schedule.json  robot_1_schedule.json  robot_2_schedule.json  robot_3_schedule.json  robot_4_schedule.json  start.sh  task_allocation.py  test_node.py  tmux_experiment.sh  tmux_simulation.sh
src/: #%2Ascratch%2A#F6sYdf#  boit_control.cpp  goal_pub.cpp  main.cpp  utils .cpp  utils.cpp  utils.h
src/boid-control/: #boid_control_node.cpp#  boid_control_node.cpp  boit_control2.cpp.old
src/boit-control/: boit_control.cpp  boit_control2.cpp
src/data-splitter/: data-splitter-node.cpp  data_splitter_node.cpp
src/goal-pub/: goal_pub.cpp
